# gsmenu

./: LICENSE  Main.hs  README  Setup.hs  gmenu.cabal  gpick.cabal  gsmenu.1  gsmenu.cabal  gsmenu_path
GMenu/: Font.hsc  Pick.hs  Util.hs
GPick/: Font.hsc  Pick.hs  Util.hs
GSMenu/: Config.hs  Font.hsc  GCCache.hs  Pick.hs  Util.hs
