name:               gsmenu
version:            4.0-dev
homepage:           http://sigkill.dk/programs/gsmenu
synopsis:           A visual generic menu
description:
    Grid-oriented element selection inspired by XMonadContrib's GridSelect.
category:           Tools
license:            BSD3
license-file:       LICENSE
author:             Troels Henriksen
maintainer:         athas@sigkill.dk
cabal-version:      >= 1.6
build-type:         Custom

executable gsmenu
    build-depends: X11>=1.5.0.0 && < 1.6, mtl, base==4.*,
                   containers, parsec==3.*, sindre, text, permute, X11-altxft

    main-is:            Main.hs

    ghc-options:        -funbox-strict-fields -Wall

    ghc-prof-options:   -prof -auto-all
    extensions:         CPP
